Dockerfile updated with JAVA 17